# KeySmith

./: README.md  pyproject.toml  run_keysmith.bat  run_keysmith.command
docs/superpowers/plans/: 2026-06-27-keysmith-implementation.md
docs/superpowers/specs/: 2026-06-27-bitcoin-vanity-address-generator-design.md
keysmith/: addressing.py  app.py  estimates.py  search.py  validation.py
keysmith/static/: app.js  index.html  styles.css
tests/: test_addressing.py  test_app.py  test_estimates.py  test_package.py  test_search.py  test_validation.py
